--- a/template/javascript/pagination.html
+++ b/template/javascript/pagination.html
@@ -1,66 +1,69 @@
-{% extends "../_layout/javascript.html" %}
-{% block mainBody %}
+{% extends "../_layout/javascript.html" %} {% block mainBody %}
 <style>
-    .pull-left{
+    .pull-left {
         float: left;
     }
-    .fs-12{
+
+    .fs-12 {
         font-size: 12px;
     }
-    .lh-26{
+
+    .lh-26 {
         line-height: 26px;
     }
-    pre{
+
+    pre {
         white-space: pre;
     }
+
 </style>
-    <section id="type" class="ui-section">
-        <h1>分页组件</h1>
-        <!-- 分页组件 -->
-        <div class="section-content" id="normal">
-            <h3>
-                <strong>概述用法</strong>
-            </h3>
-            <div class="ui-example">
-                <p class="description">
-                    分页组件是试用<code>Javascript</code>动态创建分页dom，主要使用在于ajax数据交互的场景。
-                </p>
-                <p>
-                    在<code>ul</code>元素上定义了<code>pagination</code>就可以启动分页组件。
-                </p>
-                <br/>
-                <div class="pagination-wrap">
-                    <ul class="pagination" data-pages="10" data-current-page="2">
-                        <li><a href="#">上一页</a></li>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">下一页</a></li>
-                    </ul>
-                </div>
+<section id="type" class="ui-section">
+    <h1>分页组件</h1>
+    <!-- 分页组件 -->
+    <div class="section-content" id="normal">
+        <h3>
+            <strong>概述用法</strong>
+        </h3>
+        <div class="ui-example">
+            <p class="description">
+                分页组件是试用<code>Javascript</code>动态创建分页dom，主要使用在于ajax数据交互的场景。
+            </p>
+            <p>
+                在<code>ul</code>元素上定义了<code>pagination</code>就可以启动分页组件。
+            </p>
+            <br/>
+            <div class="pagination-wrap">
+                <ul class="pagination" data-pages="10" data-current-page="2">
+                    <li><a href="#">上一页</a></li>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">下一页</a></li>
+                </ul>
             </div>
-            <div class="ui-code">
-<pre><code>&lt;div class=&quot;pagination-wrap&quot;&gt;
+        </div>
+        <div class="ui-code">
+            <pre><code>&lt;div class=&quot;pagination-wrap&quot;&gt;
    &lt;ul class=&quot;pagination data-current-page="2"&quot;&gt;
    &lt;li&gt;&lt;a href=&quot;#&quot;&gt;1&lt;/a&gt;&lt;/li&gt;
    &lt;/ul&gt;
    &lt;/div&gt;
 </code></pre>
-            </div>
         </div>
+    </div>
 
-        <!-- 配置 -->
-        <div class="section-content" id="config">
-            <h3>
-                <strong>参数配置</strong>
-            </h3>
-            <div class="ui-example">
-                <p class="description">
-                    通过<code>ul</code>的<code>data-*</code>配置，或<code>jQuery</code>插件重新绑定配置
-                </p>
-                <div class="table-wrap">
-                    <table class="table">
-                        <thead>
+    <!-- 配置 -->
+    <div class="section-content" id="config">
+        <h3>
+            <strong>参数配置</strong>
+        </h3>
+        <div class="ui-example">
+            <p class="description">
+                通过<code>ul</code>的<code>data-*</code>配置，或<code>jQuery</code>插件重新绑定配置
+            </p>
+            <div class="table-wrap">
+                <table class="table">
+                    <thead>
                         <tr>
                             <th>
                                 属性
@@ -72,8 +75,8 @@
                                 描述
                             </th>
                         </tr>
-                        </thead>
-                        <tbody>
+                    </thead>
+                    <tbody>
                         <tr>
                             <td><code>items</code></td>
                             <td><code>1</code></td>
@@ -81,7 +84,7 @@
                         </tr>
                         <tr>
                             <td><code>itemsOnPage</code></td>
-                            <td><code>1</code></td>
+                            <td><code>默认 10  <br>注意：[10 20 30 100 ]其中之一，如果不是就为 10 </code></td>
                             <td>每页记录数</td>
                         </tr>
                         <tr>
@@ -117,8 +120,8 @@
                         <tr>
                             <td><code>pageStr</code></td>
                             <td><code>{show: false, template: ''}</code>
-                                <br>
-                                模板template默认：<code>&lt;p class="pull-left fs-12 lh-26"&gt;当前是{$current}页，共{$pages}页，{$items}条记录，每页显示{$itemsOnPage}条。&lt;/p&gt;</code>
+                                <br> 模板template默认：
+                                <code>&lt;p class="pull-left fs-12 lh-26"&gt;当前是{$current}页，共{$pages}页，{$items}条记录，每页显示{$itemsOnPage}条。&lt;/p&gt;</code>
                             </td>
                             <td>
                                 显示总页码字符 <br>
@@ -129,35 +132,35 @@
                                 <code>{$itemsOnPage}</code> 每页技术数
                             </td>
                         </tr>
-                        </tbody>
-                    </table>
-                </div>
+                    </tbody>
+                </table>
             </div>
         </div>
+    </div>
 
-        <!-- 事件监听 -->
-        <div class="section-content" id="event">
-            <h3>
-                <strong>事件监听</strong>
-            </h3>
-            <div class="ui-example">
-                <p class="description">
-                    添加<code>ui.select.pagination</code>事件可以监听页码切换。
-                </p>
-                <div class="pagination-wrap text-align-center">
-                    <p class="pull-left fs-12 lh-26">当前是第{$current}页，共{$pages}页，{$items}条记录，每页显示{$itemsOnPage}条。</p>
-                    <ul id="j-page">
+    <!-- 事件监听 -->
+    <div class="section-content" id="event">
+        <h3>
+            <strong>事件监听</strong>
+        </h3>
+        <div class="ui-example">
+            <p class="description">
+                添加<code>ui.select.pagination</code>事件可以监听页码切换。
+            </p>
+            <div class="pagination-wrap text-align-center">
+                <p class="pull-left fs-12 lh-26">当前是第{$current}页，共{$pages}页，{$items}条记录，每页显示{$itemsOnPage}条。</p>
+                <ul id="j-page">
 
-                    </ul>
-                </div>
-                <br/>
-                <p>
-                    <button class="btn default small-btn" id="j-init-page">初始化分页</button>
-                </p>
+                </ul>
             </div>
-            <div class="ui-code">
-<pre><code>function ajaxData(e, index, instance){
-    alert(index);
+            <br/>
+            <p>
+                <button class="btn default small-btn" id="j-init-page">初始化分页</button>
+            </p>
+        </div>
+        <div class="ui-code">
+            <pre><code>function ajaxData(e, index, instance, pageSize){
+    alert(index,pageSize);
     index = index || 5;
 
     // 显示总页码
@@ -167,7 +170,7 @@
     $('#j-page').pagination({
         currentPage: index,
         items: 50,
-        itemsOnPage: 5,
+        itemsOnPage: 10,    //默认10  注意：[10 20 30 100 ]其中之一，如果不是就默认10 
         pageStr: {
             show: true,
             template: '&lt;p class="pull-left fs-12 lh-26"&gt;当前是第{$current}页，共{$pages}页，{$items}条记录，每页显示{$itemsOnPage}条。&lt;/p&gt;'
@@ -181,34 +184,39 @@
 
 
 </code></pre>
-            </div>
         </div>
+    </div>
 
-    </section>
-{% endblock %}
-
-{% block js %}
+</section>
+{% endblock %} {% block js %}
 <script src="{{dist}}/js/ui/pagination.js"></script>
 <script>
+    $(function () {
 
-    $(function(){
-
-        function ajaxData(e, index, instance){
-            alert(index);
+        function ajaxData(e, index, instance, pageSize) {
+            alert("index: " + index + " " + "pageSize:" + pageSize, );
             index = index || 1;
 
             // 显示总页码
             //$('#j-page').pagination({ currentPage: index, items: 50, itemsOnPage: 5, pageStr: {show: true}});
 
             // 自定义总页码模板
-            $('#j-page').pagination({ currentPage: index, items: 50, itemsOnPage: 5, pageStr: {show: true, template: '<p class="pull-left fs-12 lh-26">当前是第{$current}页，共{$pages}页，{$items}条记录，每页显示{$itemsOnPage}条。</p>'}});
+            $('#j-page').pagination({
+                currentPage: index,
+                items: 50,
+                itemsOnPage: 10,
+                pageStr: {
+                    show: true,
+                    template: '<p class="pull-left fs-12 lh-26">当前是第{$current}页，共{$pages}页，{$items}条记录，每页显示{$itemsOnPage}条。</p>'
+                }
+            });
             //alert('现在是5，被重新初始化!');
 
         }
 
         var inited = false;
-        $('#j-init-page').on('click', function(){
-            if(inited) true;
+        $('#j-init-page').on('click', function () {
+            if (inited) true;
             inited = true;
             $('#j-page').addClass('pagination');
             ajaxData();
@@ -217,5 +225,6 @@
         $('#j-page').on('select.ui.pagination', ajaxData);
 
     })
+
 </script>
 {% endblock %}
