--- a/template/javascript/pagination.html
+++ b/template/javascript/pagination.html
@@ -207,7 +207,7 @@
                 itemsOnPage: 5,
                 pageStr: {
                     show: true,
-                    template: '<p class="pull-left fs-12 lh-26">当前是第{$current}页，共{$pages}页，{$items}条记录，每页显示{$itemsOnPage}条。</p>'
+                    template: '<p class="pull-left fs-12 lh-26">当前是第{$current}页，共{$pages}页，{$items}条记录。</p>'
                 }
             });
             //alert('现在是5，被重新初始化!');
